--- a/web/vistas-documentos/ver-anteproyecto.xhtml
+++ b/web/vistas-documentos/ver-anteproyecto.xhtml
@@ -85,7 +85,7 @@
                             </h:panelGrid>
                             <br />
                             <h:panelGrid style="margin: 0 auto;">  
-                                <p:button value="Volver" icon="ui-icon-arrowthick-1-w" style="font-size: 13px; width: 120px;"/>
+                                <p:button value="Volver" outcome="/#{menuController.outcomeCarpetaPefil()}/fase-realizacion-anteproyecto" icon="ui-icon-arrowthick-1-w" style="font-size: 13px; width: 120px;"/>
                             </h:panelGrid> 
                         </p:panel>
                     </h:form>
