--- a/web/vistas-documentos/ver-formato-B.xhtml
+++ b/web/vistas-documentos/ver-formato-B.xhtml
@@ -140,7 +140,7 @@
                                 <br />
                             </h:panelGrid>
                             <h:panelGrid columns="2" cellpadding="12" style="margin: 0 auto">
-                                    <p:button value="Volver" icon="ui-icon-arrowthick-1-w" style="font-size: 13px; width: 120px;" />                             
+                                    <p:button value="Volver" outcome="/#{menuController.outcomeCarpetaPefil()}/fase-evaluacion-anteproyecto" icon="ui-icon-arrowthick-1-w" style="font-size: 13px; width: 120px;" />                             
                                     <p:button value="Descargar" icon="ui-icon-arrowthickstop-1-s" style="font-size: 13px; width: 120px;" />
                                 </h:panelGrid>
                         </p:panel>
