Sprint 5 Terminados Req. 40 Req. 41 Req. 53 Vistas para la fase de ejecución de trabajo de grado creada para todos los perfiles
Falta que el Jurado vea los trabajos de grado de los cuales es jurados

--- a/web/evaluador/fase-evaluacion-anteproyecto.xhtml
+++ b/web/evaluador/fase-evaluacion-anteproyecto.xhtml
@@ -55,7 +55,7 @@
                                         <f:param name="mode" value="'show'" />
                                     </p:effect>
                                 </p:commandButton>
-                                <p:button value="Ejecución del Trabajo de Grado" href="#" disabled="#{trabajodegradoController.fases.cuartaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
+                                <p:button value="Ejecución del Trabajo de Grado" outcome="fase-ejecucion-del-trabajo-de-grado" disabled="#{trabajodegradoController.fases.cuartaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
                                 <p:button value="Evaluación del Trabajo de Grado" href="#" disabled="#{trabajodegradoController.fases.quintaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
                                 <p:button value="Finalizado" href="#" disabled="#{trabajodegradoController.fases.sextaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
                             </h:panelGrid>
